part 5 init all core's view controller view

--- a/mInstagram/View/Storyboards/Base.lproj/Main.storyboard
+++ b/mInstagram/View/Storyboards/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" systemColor="labelColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="jPp-of-k0X" kind="relationship" relationship="viewControllers" id="8nq-hR-HTt"/>
@@ -35,7 +35,7 @@
         <scene sceneID="qeA-Rv-KVi">
             <objects>
                 <navigationController id="VcS-5W-LKQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="globe" catalog="system" id="uw8-gh-jPy"/>
+                    <tabBarItem key="tabBarItem" title="" image="magnifyingglass" catalog="system" id="uw8-gh-jPy"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="iLl-eR-S5R">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -69,7 +69,7 @@
         <scene sceneID="3ka-Tm-cDg">
             <objects>
                 <navigationController id="gG5-9M-ShA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="bell" catalog="system" id="e1h-Uc-Abx"/>
+                    <tabBarItem key="tabBarItem" title="" image="heart" catalog="system" id="e1h-Uc-Abx"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="LGx-2L-qyF">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -198,11 +198,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bell" catalog="system" width="128" height="124"/>
-        <image name="globe" catalog="system" width="128" height="121"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="house" catalog="system" width="128" height="106"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="plus" catalog="system" width="128" height="113"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
